<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>toy_problem</name>
  <version>0.0.0</version>
  <description>Solution to a job scheduling problem</description>
  <maintainer email="yadunund@openrobotics.org">yadu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rmf_traffic</depend>
  <depend>rmf_battery</depend>
  <depend>eigen</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
